--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,9 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 7
+          run_install: |
+            - args: [--frozen-lockfile]
+
       - name: Node.js setup
         uses: actions/setup-node@v2
         with:
