--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "BPExcel2Pdf"
-version = "1.0.0"
+version = "1.0.1"
 description = "Bonne Pioche Excel to Pdf"
 authors = [ "dev@akylasfr" ]
 license = "MIT"
@@ -11,13 +11,21 @@ build = "src/build.rs"
 include = [ "**/*.rs" ]
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.5", features = [] }
+tauri-build = { version = "1.0.0-rc.5", features = [ ] }
 
 [dependencies]
 flate2 = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-rc.6", features = ["dialog-open", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-print"] }
+tauri = { version = "1.0.0-rc.6", features = [
+  "dialog-open",
+  "fs-read-file",
+  "fs-write-file",
+  "path-all",
+  "protocol-asset",
+  "shell-open",
+  "window-print"
+] }
 
 [features]
 default = [ "custom-protocol" ]
