--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "BPExcel2Pdf"
-version = "1.0.1"
+version = "1.0.2"
 description = "Bonne Pioche Excel to Pdf"
 authors = [ "dev@akylasfr" ]
 license = "MIT"
@@ -11,17 +11,25 @@ build = "src/build.rs"
 include = [ "**/*.rs" ]
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.9", features = [] }
+tauri-build = { version = "1.0.0-rc.9", features = [ ] }
 
 [dependencies]
 flate2 = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-rc.11", features = ["dialog-open", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-print"] }
+tauri = { version = "1.0.0-rc.11", features = [
+  "dialog-open",
+  "fs-read-file",
+  "fs-write-file",
+  "path-all",
+  "protocol-asset",
+  "shell-open",
+  "window-print"
+] }
 
-[dependencies.tauri-plugin-window-state]
-git = "https://github.com/tauri-apps/tauri-plugin-window-state"
-branch = "dev"
+  [dependencies.tauri-plugin-window-state]
+  git = "https://github.com/tauri-apps/tauri-plugin-window-state"
+  branch = "dev"
 
 [features]
 default = [ "custom-protocol" ]
