--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
-name = "BPExcel2Pdf"
+name = "bpexcel2_pdf"
 version = "1.0.3"
 description = "Bonne Pioche Excel to Pdf"
-authors = [ "dev@akylasfr" ]
+authors = ["dev@akylasfr"]
 license = "MIT"
 repository = "https://github.com/Akylas/pbexcel2pdf"
-default-run = "BPExcel2Pdf"
+default-run = "bpexcel2_pdf"
 edition = "2018"
 build = "src/build.rs"
-include = [ "**/*.rs" ]
+include = ["**/*.rs"]
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.9", features = [ ] }
+tauri-build = { version = "1.0.0-rc.9", features = [] }
 
 [dependencies]
 flate2 = "1.0"
 serde_json = "1.0"
-serde = { version = "1.0", features = [ "derive" ] }
+serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-rc.11", features = [
   "dialog-open",
   "fs-read-file",
@@ -24,16 +24,16 @@ tauri = { version = "1.0.0-rc.11", features = [
   "path-all",
   "protocol-asset",
   "shell-open",
-  "window-print"
+  "window-print",
 ] }
 
-  [dependencies.tauri-plugin-window-state]
-  git = "https://github.com/tauri-apps/tauri-plugin-window-state"
-  branch = "dev"
+[dependencies.tauri-plugin-window-state]
+git = "https://github.com/tauri-apps/tauri-plugin-window-state"
+branch = "dev"
 
 [features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
+default = ["custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
 
 [profile.release]
 panic = "abort"
