--- a/package.json
+++ b/package.json
@@ -36,37 +36,37 @@
     "release": "standard-version --commit-all --preset angular"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.44",
-    "@tauri-apps/api": "1.0.0-rc.5",
-    "@tauri-apps/cli": "1.0.0-rc.11",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@sveltejs/vite-plugin-svelte": "1.3.1",
+    "@tauri-apps/api": "1.2.0",
+    "@tauri-apps/cli": "1.2.0",
     "@tauri-apps/toml": "^2.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "cssnano": "^5.1.9",
-    "eslint": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
-    "node-sass": "^7.0.1",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.52.1",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "sass": "^1.56.1",
     "standard-version": "^9.5.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.6",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.9"
+    "svelte": "^3.53.1",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
   },
   "dependencies": {
-    "carbon-components": "next",
-    "carbon-components-svelte": "^0.64.0",
-    "carbon-icons-svelte": "^11.0.1",
+    "carbon-components": "10.58.3",
+    "carbon-components-svelte": "^0.70.12",
+    "carbon-icons-svelte": "^11.4.0",
     "convert-excel-to-json": "^1.7.0",
     "events": "^3.3.0",
-    "svelte-i18n": "^3.4.0",
+    "svelte-i18n": "^3.5.2",
     "svelte-tauri-filedrop": "^1.0.0",
     "xlsx": "^0.18.5"
   },
