--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,25 +11,15 @@ build = "src/build.rs"
 include = [ "**/*.rs" ]
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.9", features = [ ] }
+tauri-build = { version = "1.1.1", features = [] }
 
 [dependencies]
 flate2 = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-rc.11", features = [
-  "dialog-open",
-  "fs-read-file",
-  "fs-write-file",
-  "path-all",
-  "protocol-asset",
-  "shell-open",
-  "window-print"
-] }
+tauri = { version = "1.2.0", features = ["dialog-open", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-print"] }
+tauri-plugin-window-state = "0.1"
 
-  [dependencies.tauri-plugin-window-state]
-  git = "https://github.com/tauri-apps/tauri-plugin-window-state"
-  branch = "dev"
 
 [features]
 default = [ "custom-protocol" ]
