--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bpexcel2_pdf"
-version = "1.0.4"
+version = "1.1.0"
 description = "Bonne Pioche Excel to Pdf"
 authors = [ "dev@akylasfr" ]
 license = "MIT"
@@ -11,15 +11,22 @@ build = "src/build.rs"
 include = [ "**/*.rs" ]
 
 [build-dependencies]
-tauri-build = { version = "1.1.1", features = [] }
+tauri-build = { version = "1.1.1", features = [ ] }
 
 [dependencies]
 flate2 = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.2.0", features = ["dialog-open", "fs-read-file", "fs-write-file", "path-all", "protocol-asset", "shell-open", "window-print"] }
+tauri = { version = "1.2.0", features = [
+  "dialog-open",
+  "fs-read-file",
+  "fs-write-file",
+  "path-all",
+  "protocol-asset",
+  "shell-open",
+  "window-print"
+] }
 tauri-plugin-window-state = "0.1"
-
 
 [features]
 default = [ "custom-protocol" ]
