chore: project update

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "type": "git",
     "url": "git+https://github.com/Akylas/bpxcel2pdf.git"
   },
+  "type": "module",
   "author": {
     "name": "Martin Guillon",
     "email": "martin@akylas.fr"
@@ -36,29 +37,29 @@
     "release": "standard-version --commit-all --preset angular"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@sveltejs/vite-plugin-svelte": "1.3.1",
-    "@tauri-apps/api": "1.2.0",
-    "@tauri-apps/cli": "1.2.0",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@sveltejs/vite-plugin-svelte": "2.2.0",
+    "@tauri-apps/api": "1.3.0",
+    "@tauri-apps/cli": "1.3.1",
     "@tauri-apps/toml": "^2.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "cssnano": "^5.1.14",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "node-sass": "^8.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "sass": "^1.56.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.0",
+    "sass": "^1.62.1",
     "standard-version": "^9.5.0",
-    "svelte": "^3.53.1",
-    "svelte-check": "^2.9.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte": "^3.59.1",
+    "svelte-check": "^3.3.2",
+    "svelte-preprocess": "^5.0.3",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^4.3.5"
   },
   "dependencies": {
     "carbon-components": "10.58.3",
